--- a/frontend/www/js/badges/badges.css
+++ b/frontend/www/js/badges/badges.css
@@ -1,10 +1,8 @@
-div.badges
-{
+div.badges {
   display: inline-block;
   margin-right: 4px;
 }
-img.emoji
-{
+img.emoji {
   height: 20px;
   vertical-align: bottom;
 }
